[package]
name = "hv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
vaultrs = "0.7.0"
tokio = { version = "1.29.1", features = ["full"] }
futures = "0.3.28"
regex = "1.8.4"
